# py_selfish

./: .editorconfig  .gitignore  .isort.cfg  CHANGES.txt  LICENSE.txt  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: pypi.yml  python.yml
selfish/: __init__.py
tests/: SelfishTest.py  test_selfish.py
